@@ -36,7 +36,7 @@ enum {BRG, BIF, BMF, BAF, MAF, GFF, LastFileType};
 #define BFAST_RG_FILE_EXTENSION "brg"
 #define BFAST_INDEX_FILE_EXTENSION "bif"
 #define BFAST_MATCHES_FILE_EXTENSION "bmf"
-#define BFAST_MATCHES_READS_FILTERED_FILE_EXTENSION "fa"
+#define BFAST_MATCHES_READS_FILTERED_FILE_EXTENSION "fastq"
 #define BFAST_ALIGNED_FILE_EXTENSION "baf"
 #define BFAST_MAF_FILE_EXTENSION "maf"
 #define BFAST_GFF_FILE_EXTENSION "gff"
